--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
     "start": "run-script-os",
-    "start:win32": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve",
-    "start:darwin:linux": "export NODE_OPTIONS=--openssl-legacy-provider && ng serve",
+    "start:win32": "set node=--openssl-legacy-provider && ng serve",
+    "start:darwin:linux": "export node=--openssl-legacy-provider && ng serve",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -92,10 +92,12 @@
     "@types/node": "6.0.90",
     "codelyzer": "^5.0.1",
     "conventional-changelog-cli": "^2.1.1",
+    "cypress": "^12.9.0",
     "husky": "0.13.3",
     "npm-run-all": "4.0.2",
     "rimraf": "2.6.1",
     "run-script-os": "^1.1.6",
+    "start-server-and-test": "^2.0.0",
     "stylelint": "7.13.0",
     "ts-node": "9.1.1",
     "tslint": "^6.1.3",
